--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -6,7 +6,9 @@ This section is not required for an update assessment; please refer to the most 
 
 ## Responses to SSC Groundfish Subcommittee requests
 
-To be completed after SSC GFSC review.
+The 2017 assessment was a benchmark assessment reviewed by a STAR panel and the PFMC SSC, and therefore, the Groundfish Subcommittee of the PFMC SSC did not review the 2017 assessment. No Yelloweye Rockfish benchmark or update assessments have been conducted since. 
+
+Responses to the 2025 GFSC review of this update assessment will be added following their review. 
 
 ## Model Structure and Assumptions{#sec-bridge}
 
