--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -261,7 +261,7 @@
 Whitman \and Elizabeth Perl \and Matheus de Barros \and Juliette
 Champagnat \and Abby Schamp \and Samantha Schiano \and Fabio Prior
 Caltabellotta \and Vladlena Gertseva \and Ian Taylor \and Kiva Oken}
-\date{2025-05-28}
+\date{2025-05-29}
 
 \begin{document}
   \begin{titlepage}
@@ -1664,17 +1664,63 @@ Figure~\ref{fig-IPHC_agecomps1} and Figure~\ref{fig-IPHC_agecomps2}.
 \subsection{Biological Parameters and
 Data}\label{biological-parameters-and-data}
 
-The approach to natural mortality, maturity and fecundity were unchanged
-from the previous assessment (Gertseva and Cope 2017). All of these
-biological parameters used in the assessment were estimated outside the
-model or obtained from literature. Therefore, uncertainty reported for
-the stock assessment results does not include any uncertainty in these
-quantities (however, some were investigated via sensitivity analyses
-described later in this report). The parameters for the length-weight
-relationship were updated to include the most recent data from 2017 -
-2024; see the updated equation: \(W =\)
-7.18331*10\textsuperscript{-6}L\textsuperscript{3.2448}
-(Figure~\ref{fig-LWrel}). Aging error matrices were unchanged.
+Several biological parameters used in the assessment were estimated
+outside the model or obtained from literature. Their values were treated
+in the model as fixed, and therefore uncertainty reported for the stock
+assessment results does not include any uncertainty in these quantities
+(however, some were investigated via sensitivity analyses described
+later in this report). These parameters include length-weight
+relationship parameters, maturity and fecundity parameters, natural
+mortality, and ageing error. The methods used to derive these parameters
+in the assessment are described below.
+
+\subsubsection{Length-Weight
+Relationship}\label{length-weight-relationship}
+
+The parameters for the length-weight relationship were updated to
+include the most recent WCGBTS data from 2017 - 2024. Length-weight
+curves were fitted using this equation:
+
+\(W =\) 7.18331*10\textsuperscript{-6}\(L\)\textsuperscript{3.2448}
+
+Where \(W\) is individual weight (kg) and \(L\) is total natural length
+(cm) (Figure~\ref{fig-LWrel}).
+
+\subsubsection{Maturity}\label{maturity}
+
+The length at maturity relationship remained unchanged from the 2017
+assessment. They used a functional maturity approach to assess
+individual maturity and account for possible false spawning events
+(Gertseva and Cope 2017). Figure~\ref{fig-maturity} shows the logistic
+curve applied in this assessment.
+
+\subsubsection{Fecundity}\label{fecundity}
+
+The fecundity-at-length relationship also remained unchanged from the
+2017 assessment and was developed by Dick et al. (2017) using a
+hierarchical Bayesian modeling framework. The fecundity was assumed to
+be related to female body size:
+
+\(F = aL^b\)
+
+Where \(F\) is fecundity (number of eggs), \(L\) is fish length (cm),
+and \(a\) and \(b\) are constant coefficients. For Yelloweye Dick et al.
+(2017) estimated \(a = 7.21847\)*10\textsuperscript{-8} and
+\(b = 4.043\).
+
+\subsubsection{Natural Mortality}\label{natural-mortality}
+
+The 2025 base model used the 2017 assessment's initial value of natural
+Mortality (\(M\)) which was estimated based on Hamel (2015).
+
+Aging error matrices were unchanged.
+
+\subsection{Environmental and ecosystem
+data}\label{environmental-and-ecosystem-data}
+
+No environmental or ecosystem data were used in the 2017 assessment
+(Gertseva and Cope 2017) and no new data sources were considered for
+this update assessment.
 
 \newpage{}
 
@@ -1690,7 +1736,13 @@ information.
 \subsection{Responses to SSC Groundfish Subcommittee
 requests}\label{responses-to-ssc-groundfish-subcommittee-requests}
 
-To be completed after SSC GFSC review.
+The 2017 assessment was a benchmark assessment reviewed by a STAR panel
+and the PFMC SSC, and therefore, the Groundfish Subcommittee of the PFMC
+SSC did not review the 2017 assessment. No Yelloweye Rockfish benchmark
+or update assessments have been conducted since.
+
+Responses to the 2025 GFSC review of this update assessment will be
+added following their review.
 
 \subsection{Model Structure and Assumptions}\label{sec-bridge}
 
@@ -2302,7 +2354,7 @@ population:
 
 \newpage{}
 
-\subsection{Acknowledgements}\label{sec-acknowledgements}
+\section{Acknowledgements}\label{sec-acknowledgements}
 
 \newpage{}
 
@@ -3836,18 +3888,18 @@ assumed catch for the first two years of the projection period.}
 \toprule
 Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buffer & ABC (mt) & ACL (mt) & Spawning output & Fraction Unfished \\ 
 \midrule\addlinespace[2.5pt]
-2025 & 106 & 56 & 49 & — & — & — & — & 473 & 0.399 \\ 
-2026 & 108 & 57 & 50 & — & — & — & — & 497 & 0.419 \\ 
-2027 & — & — & — & 127 & 0.873 & 111 & 111 & 521 & 0.439 \\ 
-2028 & — & — & — & 129 & 0.864 & 111 & 111 & 538 & 0.453 \\ 
-2029 & — & — & — & 130 & 0.856 & 111 & 111 & 552 & 0.465 \\ 
-2030 & — & — & — & 131 & 0.848 & 111 & 111 & 565 & 0.476 \\ 
-2031 & — & — & — & 131 & 0.840 & 110 & 110 & 575 & 0.484 \\ 
-2032 & — & — & — & 131 & 0.832 & 109 & 109 & 582 & 0.490 \\ 
-2033 & — & — & — & 131 & 0.824 & 108 & 108 & 587 & 0.494 \\ 
-2034 & — & — & — & 131 & 0.817 & 107 & 107 & 590 & 0.497 \\ 
-2035 & — & — & — & 131 & 0.809 & 106 & 106 & 592 & 0.499 \\ 
-2036 & — & — & — & 131 & 0.801 & 105 & 105 & 593 & 0.499 \\ 
+2025 & 105.8 & 55.8 & 49.3 & — & — & — & — & 473.4 & 0.399 \\ 
+2026 & 108.3 & 56.6 & 50.1 & — & — & — & — & 497.4 & 0.419 \\ 
+2027 & — & — & — & 127.5 & 0.873 & 111.3 & 111.3 & 521.2 & 0.439 \\ 
+2028 & — & — & — & 129.0 & 0.864 & 111.5 & 111.5 & 537.8 & 0.453 \\ 
+2029 & — & — & — & 130.1 & 0.856 & 111.4 & 111.4 & 552.5 & 0.465 \\ 
+2030 & — & — & — & 130.8 & 0.848 & 110.9 & 110.9 & 564.8 & 0.476 \\ 
+2031 & — & — & — & 131.2 & 0.840 & 110.2 & 110.2 & 574.5 & 0.484 \\ 
+2032 & — & — & — & 131.3 & 0.832 & 109.3 & 109.3 & 581.8 & 0.490 \\ 
+2033 & — & — & — & 131.3 & 0.824 & 108.2 & 108.2 & 586.8 & 0.494 \\ 
+2034 & — & — & — & 131.2 & 0.817 & 107.2 & 107.2 & 590.0 & 0.497 \\ 
+2035 & — & — & — & 131.1 & 0.809 & 106.0 & 106.0 & 591.9 & 0.499 \\ 
+2036 & — & — & — & 130.9 & 0.801 & 104.9 & 104.9 & 592.9 & 0.499 \\ 
 \bottomrule
 
 \end{longtable}
@@ -4165,6 +4217,19 @@ age-at-length data for the IPHC (1 of 2).}
 }
 
 \caption{\label{fig-LWrel}Updated weight-at-length relationship.}
+
+\end{figure}%
+
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/bio6_maturity.png}}
+
+}
+
+\caption{\label{fig-maturity}Maturity at length relationship used in the
+base model for Yelloweye Rockfish.}
 
 \end{figure}%
 
