rerun states of nature with fixed forecasted catch

--- a/Rcode/decision_table_models.Rmd
+++ b/Rcode/decision_table_models.Rmd
@@ -30,6 +30,19 @@ mod <- SS_read(here::here("model", "2025_base_model"))
 # Change M
 mod$ctl$MG_parms["NatM_p_1_Fem_GP_1", ]$INIT <- 0.056
 
+forecast_catch <- r4ss::SS_ForeCatch(mod, yrs = 2025:2036)
+
+forecast_catch <- r4ss::SS_ForeCatch(
+  replist = mod,
+  yrs = 2025:2036
+) |>
+  dplyr::rename(
+    year = "#Year",
+    seas = "Seas",
+    fleet = "Fleet",
+    catch_or_F = "dead(B)",
+  )
+
 # Run and save model
 SS_write(mod, here::here("model", "2025_high_state"), overwrite = TRUE)
 r4ss::run(dir = here::here("model", "2025_high_state"), exe = exe_loc, show_in_console = TRUE, skipfinished = FALSE)
